# kernel-fuzzer-for-xen-project

./: .astylerc  .gitignore  .gitmodules  AUTHORS  COPYING  Makefile.am  README.md  configure.ac  tpp.txt
.github/workflows/: astyle.yml  ci.yml  codeql.yml  scorecard.yml
patches/: 0001-AFL-Xen-mode.patch  0001-AFLplusplus-Xen-mode.patch  0001-KF-x-cmin-support.patch  0001-kfx_dma_log-virtio-snapshotting.patch  0001-linux-kfx-cpuid-vmexit.patch  0001-qemu-kfx-cpuid-vmexit.patch  0002-qemu-Add-more-register-to-ELF-vmcore-dump.patch
scripts/: debug.cmd  kvm2kfx.sh  serial-bridge.sh  simics2kfx.sh  stack_pop_check.sh
src/: afl.c  afl.h  capture-vmcore.c  city.h  dmamonitor.c  forkvm.c  forkvm.h  forkvm_main.c  getregs.c  kasan_handler.c  main.c  private.c  private.h  ptcov.c  ptcov.h  rwmem.c  save-transplant-main.c  save-transplant.c  save-transplant.h  setup.c  setup.h  signal.c  signal.h  sink.h  sink_extra.c  sink_extra.h  sink_handler.h  sink_kasan.c  stack_unwind.c  stack_unwind.h  stack_unwind_main.c  stepper.c  tracer.c  tracer.h  vmi.c  vmi.h  xen-transplant.c
testmodule/: Makefile  doublefetch.c  testmodule.c
testmodule_win/: ioctl.sln
testmodule_win/exe/: install.c  ioctlapp.vcxproj  testapp.c
testmodule_win/sys/: harness.asm  harness.h  sioctl.c  sioctl.h  sioctl.rc  sioctl.vcxproj  sioctl.vcxproj.Filters
tools/: README  vmfork.go
